--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta content="Syko Ink - The Discord CLoner" property="og:title" />
+<meta content="Syko Ink - The Discord Cloner" property="og:title" />
 <meta content="Trying to be noob" property="og:description" />
 <meta content="https://syko.ink" property="og:url" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+<meta name="description" content="The Discord Cloner"/>
 
+    
 <head>
     <meta charset="UTF-8" />
     <title>Syko Ink - Home</title>
